--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
           <ul class="navbar-nav ml-auto" text-uppercase>
 
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="#">Bubble Sort</a>
+              <a class="nav-link" href="Bubble.html">Bubble Sort</a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="#">Insertion Sort</a>
+                <a class="nav-link" href="Insertion.html">Insertion Sort</a>
               </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="#">Quick Sort</a>
+                <a class="nav-link" href="Quick.html">Quick Sort</a>
             </li>
             
           </ul>
@@ -53,11 +53,6 @@
         <div class="center-div">
             <h1 class="font-weight-bold"> SORTING VISUALIZER </h1>
             <p> we help you to visualize sorting algorithms to have good and better understanding </p>
-
-            <!-- <div class="header-button">
-                <a href="#" > Click 1 </a>
-                <a href="#" > Click 2 </a>
-            </div> -->
         </div>
     </section>
 </div>
@@ -71,7 +66,7 @@
     <div class="container">
         <div class="row">
             <div class=" extra-div col-lg-4 col-md-4 col-12">
-                <h2> BUBBLE sORT </h2>
+                <h2> BUBBLE SORT </h2>
                 <p> Bubble Sort is the simplest sorting algorithm that works by repeatedly swapping the adjacent 
                   elements if they are in the wrong order. This algorithm is not suitable for large data sets 
                   as its average and worst-case time complexity is quite high.</p>
