--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <h2> QUICK SORT </h2>
                 <p> QuickSort is a Divide and Conquer algorithm. It picks an element as a pivot and partitions 
                   the given array around the picked pivot. 
-                  <p>Time Complexity: </p>
+                  <p>Time Complexity: T(n) = T(k) + T(n-k-1) + theta(n) </p>
                   <p> Auxiliary Space: </p>
                   <br>
             <a href="Quick.html" > Visualize </a>
